--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "example of how to setup passport",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
@@ -38,6 +38,6 @@
     "react-dom": "^16.7.0",
     "react-icons": "^3.3.0",
     "react-router-dom": "^4.3.1",
-    "reactstrap": "^7.0.2"
+    "reactstrap": "^7.1.0"
   }
 }
